# level-server

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20240704235359_make_fields_not_null.sql
queries/: delete_all_objects.sql  get_first_id.sql  get_object_by_id.sql  get_objects.sql  get_row_count.sql  set_object.sql
src/: main.rs  migration_tool.rs  queries.rs
