[package]
name = "level-server"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "migration_tool"
# path = "src/migration_tool.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres"] }
serde = "1.0"
dotenvy = "0.15"